# aws-cdk-devcontainer-image

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/config/: starship.toml
.devcontainer/templates/: .awsprofile.template  .envrc.template
